# corrode

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/corrode-admin/: Cargo.toml
crates/corrode-admin/examples/: blog_admin.rs
crates/corrode-admin/src/: error.rs  lib.rs  site.rs
crates/corrode-admin/src/templates/: base.rs  detail.rs
crates/corrode-admin/src/views/: delete.rs  detail.rs  index.rs  list.rs  mod.rs
crates/corrode-auth/: Cargo.toml
crates/corrode-auth/src/: error.rs  lib.rs
crates/corrode-forms/: Cargo.toml
crates/corrode-forms/src/: lib.rs
crates/corrode-migrate/: Cargo.toml
crates/corrode-migrate/examples/: blog_migrations.rs
crates/corrode-migrate/src/: history.rs  lib.rs  main.rs  writer.rs
crates/corrode-orm/: Cargo.toml
crates/corrode-orm/src/: lib.rs  queryset.rs
crates/corrode-orm/src/fields/: char.rs  relations.rs
crates/corrode-orm/src/query/: filter.rs
crates/corrode-router/: Cargo.toml
crates/corrode-router/src/: lib.rs  middleware.rs  path.rs
doc/docs/admin/: index.md
e2e/: package.json  playwright.config.ts
